# Shamor-Zachor

./: .gitignore  README.md  backend.py  data_loader.py  directory structure.txt  main.py  progress.json  progress_manager.py  pyproject.toml  requirements.txt  run-repomix.bat  shas_icons.py
.github/workflows/: apk-build-official.yml  apk-build.yml  build-and-release.yml  build-android.yml  build-android2.yml  build-apk.yml  build-apk2.yml  build-windows.yml  desktop-and-mobile-builds.yml  flet-build-exp.yml  flutter-build.yml  publish-installer.yml  windows-build.yml
data/: rambam.json  shas.json  shulchan_aruch.json  tanach.json  yerushalmi.json
docs/: CNAME  index.html  script.js  style.css
legacy/: progress_manager.py  pyproject.toml  requirements.txt
legacy/data/: tanach.json  yerushalmi.json
legacy/scripts/: convert_hebdate.py
scripts/: chaper_numbering_script.py  code.py  convert_mishna.py  convert_rambam.py  convert_shas.py  convert_tanach.py  converter.py
shamor_vezachor/: README.md  pubspec.yaml
shamor_vezachor/ios/Runner.xcodeproj/: project.pbxproj
shamor_vezachor/lib/: main.dart
shamor_vezachor/lib/models/: book_model.dart  progress_model.dart
shamor_vezachor/lib/screens/: book_detail_screen.dart  books_screen.dart  main_layout_screen.dart  tracking_screen.dart
shamor_vezachor/lib/services/: data_loader_service.dart
shamor_vezachor/lib/widgets/: book_card_widget.dart  hebrew_utils.dart
shamor_vezachor/linux/: CMakeLists.txt
shamor_vezachor/macos/Runner.xcodeproj/: project.pbxproj
shamor_vezachor/test/: widget_test.dart
shamor_vezachor/web/: manifest.json
shamor_vezachor/windows/runner/: Runner.rc  main.cpp
src/: data_loader.py  main.py  progress_manager.py  pubspec.yaml  run.bat
src/android/: gradle.properties
src/android/app/: build.gradle  build.gradle.kts
src/data/: shas.json  shulchan_aruch.json  tanach.json
src/lib/: main.dart
src/linux/: my_application.cc
src/test/: hebrew_utils_test.dart  mocks.dart  progress_provider_test.dart  progress_provider_test.mocks.dart
src/web/: index.html  manifest.json
src/windows/: CMakeLists.txt
(+47 files in other folders)
